# routenda

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: README.md  env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/src/visit_agent/: config.py
apps/api/src/visit_agent/agent/: agent.py  context.py  graph.py  llm_gateway.py  policy.py  runtime.py  session_store.py  state.py  tracing.py
apps/api/src/visit_agent/agents/: __init__.py  plan_solve_agent.py  react_agent.py  reflection_agent.py  simple_agent.py
apps/api/src/visit_agent/api/: __init__.py  app.py  feishu_events.py  feishu_ws.py  openapi.py  schemas.py  server.py
apps/api/src/visit_agent/application/: outbox.py  outbox_worker.py  reconciliation.py  status.py  tokens.py
apps/api/src/visit_agent/core/: __init__.py  agent.py  config.py  exceptions.py  llm.py  message.py
apps/api/src/visit_agent/domain/: models.py
apps/api/src/visit_agent/planning/: solver.py
apps/api/src/visit_agent/tools/: __init__.py  async_executor.py  base.py  chain.py  registry.py  (+1 more)
apps/api/tests/: conftest.py  test_agent_graph.py  test_agent_runtime.py  test_api_fastapi.py  test_domain.py  test_http_adapters.py  test_integration.py  test_outbox_worker.py  test_reconciliation.py  test_resilience.py  test_sqlalchemy_models.py  test_sqlalchemy_seed_fk.py  test_tokens.py
(+70 files in other folders)
