[project]
name = "routenda-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn",
  "pydantic>=2",
  "sqlalchemy>=2",
  "alembic",
  "psycopg[binary]",
  "httpx==0.27.2",
  "langgraph",
  "ortools",
  "pytest",
  "ruff",
  "mypy",
  "anyio==4.8.0",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
